syntax = "proto3";
package NetworkMessages;

message State
{
	uint64 tick = 1;
	uint64 sender = 2;
	optional double timestamp = 3;
}

message Handshake
{
	uint64 tick = 1;
	uint64 sender = 2;
	optional double timestamp = 3;
	optional string status = 5;
	repeated uint64 peers = 4;
}

message Chat
{
	uint64 sender = 1;
	string message = 2;
}

message Command
{
	string commandType = 1;
	oneof command
	{
		MoveUnit moveUnit = 2;
		ActivateAbility activateAbility = 3;
	}
	uint64 sender = 99;
}

message MoveUnit
{
	uint64 unitId = 1;
	Hex target = 2;
}

message ActivateAbility
{
	uint64 unitId = 1;
	string abilityName = 2;
	Hex target = 3;
}

message Hex
{
	uint64 q = 1;
	uint64 r = 2;
	uint64 s = 3;
}
